feat: add user to organization endpoint and request schema
